@@ -129,6 +129,7 @@ France              FR/FRA    **Métropole** (default), Alsace-Moselle, Guadelou
                               Martinique, Mayotte, Nouvelle-Calédonie, La Réunion,
                               Polynésie Française, Saint-Barthélémy, Saint-Martin,
                               Wallis-et-Futuna
+Georgia             GE/GEO
 Germany             DE/DEU    prov = BW, BY, BYP, BE, BB, HB, HH, HE, MV, NI, NW, RP, SL,
                               SN, ST, SH, TH
 Greece              GR/GRC    None
